Initial commit for corpCfO project

--- a/index.html
+++ b/index.html
@@ -5,32 +5,32 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>corpcfo</title>
+     <title>CorpCFO | Expert CFO Services, Tax & Business Advisory in India</title>
 
-     <!--=====FAB ICON=======-->
-    <link rel="shortcut icon" href="assets/img/logo/fav-logo1.png" type="image/x-icon">
     
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+   <!-- Add this in the <head> of your HTML -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-  <style>
-    /* Headings */
-    h1, h2, h3, h4, h5, h6 {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 700;
-      color: #1a1a1a;
-    }
+<style>
+/* ===== Apply Roboto font to entire website ===== */
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400; /* Regular for normal text */
+  line-height: 1.6;
+  color: #333;
+}
 
-    /* Body */
-    body, p, li, span, a {
-      font-family: 'Open Sans', sans-serif;
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 1.6;
-      color: #333;
-    }
-  </style>
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700; /* Bold for headings */
+  color: #111;
+}
 
+p, li, a, span {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400; /* Regular for paragraphs, lists, links */
+}
+</style>
 
 
 
@@ -87,7 +87,7 @@
                                  
                               </li>
                               <li class="has-dropdown">
-                                  <a href="#">About <span><i class="fa-solid fa-angle-down d-lg-inline d-none"></i></span></a>
+                                  <a href="about.html">About <span><i class="fa-solid fa-angle-down d-lg-inline d-none"></i></span></a>
                                   <ul class="sub-menu">
                                       <li><a href="about.html">About Us</a></li>
                                       <li><a href="team.html">Our Team</a></li>
@@ -100,7 +100,7 @@
   <ul class="sub-menu">
 
     <!-- India Entry Services -->
-    <li><a href="service1.html">India Entry Services</a></li>
+    <li><a href="service.html">India Entry Services</a></li>
 
     <!-- Secretarial -->
     <li>
@@ -234,7 +234,7 @@
     <div class="vl-offcanvas-wrapper">
         <div class="vl-offcanvas-header d-flex justify-content-between align-items-center mb-90">
             <div class="vl-offcanvas-logo">
-                <a href="indexjavascript:void()"><img src="assets/img/logo/logo1.png" alt=""></a>
+                <a href="index.html"><img src="assets/img/logo/logo1.png" alt=""></a>
             </div>
             <div class="vl-offcanvas-close">
                <button class="vl-offcanvas-close-toggle"><i class="fa-solid fa-xmark"></i></button>
@@ -249,9 +249,9 @@
         <div class="vl-offcanvas-info">
             <h3 class="vl-offcanvas-sm-title">Contact Us</h3>
             <div class="space20"></div>
-            <span><a href="#"> <i class="fa-regular fa-envelope"></i>+91 79826 59724 </a></span>
-            <span><a href="#"><i class="fa-solid fa-phone"></i> info@Corpcfogrp.com</a></span>
-            <span><a href="#"><i class="fa-solid fa-location-dot"></i>209D, Jaina Tower-2
+            <span><a href="tel:+91 79826 59724"> <i class="fa-regular fa-envelope"></i>+91 79826 59724 </a></span>
+            <span><a href="mailto:info@Corpcfogrp.com"><i class="fa-solid fa-phone"></i> info@Corpcfogrp.com</a></span>
+            <span><a href="https://www.google.com/maps?q=209D, Jaina Tower-2, Janakpuri District Center, New Delhi-110058" target="_blank"><i class="fa-solid fa-location-dot"></i>209D, Jaina Tower-2
 Janakpuri District Center,
 New Delhi-110058</a></span>
         </div>
