--- a/service9.html
+++ b/service9.html
@@ -87,7 +87,7 @@ p, li, a, span {
                                  
                               </li>
                               <li class="has-dropdown">
-                                <a href="#">About Us<span><i ></i></span></a>
+                                <a href="about.html">About Us<span><i ></i></span></a>
                                   
                               <li>
   <a href="service.html">Our Services 
