--- a/about.html
+++ b/about.html
@@ -8,7 +8,29 @@
      <title>Finazze - Business & Finance  HTML Templete</title>
 
      <!--=====FAB ICON=======-->
-    <link rel="shortcut icon" href="assets/img/logo/fav-logo1.png" type="image/x-icon">
+     <!-- Add this in the <head> of your HTML -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+<style>
+/* ===== Apply Roboto font to entire website ===== */
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400; /* Regular for normal text */
+  line-height: 1.6;
+  color: #333;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700; /* Bold for headings */
+  color: #111;
+}
+
+p, li, a, span {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400; /* Regular for paragraphs, lists, links */
+}
+</style>
 
     <!--===== CSS LINK =======-->
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
@@ -989,9 +1011,9 @@ New Delhi-110058</a></span>
           <h3>Contact Us</h3>
           <ul>
             <li><a href="tel:+917982659724"><img src="assets/img/icons/phn1.svg" alt="">+91 79826 59724</a></li>
-            <li><a href="#"><img src="assets/img/icons/location1.svg" alt="">209D, Jaina Tower-2 Janakpuri District Center, New Delhi-110058</a></li>
+            <li><a href="https://www.google.com/maps?q=209D, Jaina Tower-2, Janakpuri District Center, New Delhi-110058"><img src="assets/img/icons/location1.svg" alt="">209D, Jaina Tower-2 Janakpuri District Center, New Delhi-110058</a></li>
             <li><a href="mailto:info@Corpcfogrp.com"><img src="assets/img/icons/email1.svg" alt="">info@Corpcfogrp.com</a></li>
-            <li><a href="#"><img src="assets/img/icons/global1.svg" alt="">corpcfogrp.com</a></li>
+            <li><a href="index.html"><img src="assets/img/icons/global1.svg" alt="">corpcfogrp.com</a></li>
           </ul>
         </div>
       </div>
