--- a/team.html
+++ b/team.html
@@ -8,7 +8,29 @@
      <title>Finazze - Business & Finance  HTML Templete</title>
 
      <!--=====FAB ICON=======-->
-    <link rel="shortcut icon" href="assets/img/logo/fav-logo1.png" type="image/x-icon">
+    <!-- Add this in the <head> of your HTML -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+<style>
+/* ===== Apply Roboto font to entire website ===== */
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400; /* Regular for normal text */
+  line-height: 1.6;
+  color: #333;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700; /* Bold for headings */
+  color: #111;
+}
+
+p, li, a, span {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400; /* Regular for paragraphs, lists, links */
+}
+</style>
 
     <!--===== CSS LINK =======-->
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
